jackson-binding support for arrays in AttributeTypeInfo and Patch
Support binding array types to AttributeTypeInfo attribtues.
Support arrays as value objects in Patch objects.

Improve JSON encoding of Literal, using specialized encoder and
decoder, instead of multiple instance fields.